2004-03-04  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/livarot/Shape.cpp (Distance): Convert to DistanceLE(p, d)
	function returning true iff Distance(p) <= d.  (Saves 7% of total
	inkscape CPU time for "big scribbles" test cases.)  Update callers.

2004-03-04  Ted Gould  <ted@gould.cx>

	* src/extension/system.cpp, src/extension/system.h,
	  src/extension/extension.cpp, src/extension/extension.h,
	  src/extension/init.cpp, src/extension/internal/gnome.cpp,
	  src/extension/internal/ps.cpp, src/extension/internal/svg.cpp,
	  src/extension/internal/win32.cpp:
	Making it so that an implementation is a require element to
	build an extension.  This means that checking for one in every
	other function is not required.  Makes a touch more sense.

2004-03-04  Jon A. Cruz  <jon@joncruz.org>

	* src/file.cpp, src/interface.cpp, src/inkscape-stock.cpp,
	src/sp-image.cpp, src/helper/png-write.cpp,
	src/widgets/icon.cpp:
	Fixed filename/URI translation to keep UTF-8 internally.

2004-03-03  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/seltrans.cpp (sign):
	New function to replace `FOO / fabs(FOO)' expressions in various places.
	* src/seltrans.cpp (sp_sel_trans_stretch_request, sp_sel_trans_stretch):
	Fix #906221.  Also change the behaviour to allow growing.

	* src/libnr/nr-scale.h: operator[]: new versions returning writable reference.

	* src/desktop-snap.h, src/desktop-snap.cpp
	(sp_desktop_vector_snap_list):
	Change final arg from NR::Point to NR::scale.  Update callers.

2004-03-02  Ted Gould  <ted@gould.cx>

	* src/Makefile.am, src/print.cpp,
	  src/extension/db.cpp, src/extension/db.h, 
	  src/extension/extension.cpp, src/extension/extension.h, 
	  src/extension/system.cpp, src/extension/system.h, 
	  src/extension/init.cpp, src/extension/menu.cpp, 
	  src/extension/impelementation/Makefile.am,
	  src/extension/impelementation/implementation.cpp,
	  src/extension/impelementation/implementation.h,
	  src/extension/impelementation/script.h,