@@ -1,3 +1,7 @@
+2004-03-04  Ted Gould  <ted@gould.cx>
+
+	* src/extension/extension.h: Cleaning up and adding comments.
+
 2004-03-04  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/livarot/Shape.cpp (Distance): Convert to DistanceLE(p, d)
